Project

General

Profile

Actions

Bug #38065

closed

deep fsck fails on inspecting very large onodes

Added by Igor Fedotov about 5 years ago. Updated about 5 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
Target version:
-
% Done:

0%

Source:
Tags:
Backport:
mimic,luminous
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

Steps to reproduce (100%):
Put 3GB object to replicated pool via rados then do deep fsck either on mount or via ceph-bluestore-tool.
Following output is provided:

2019-01-28 17:17:55.960 7f5d42af2b40 -1 bdev(0x557b43254700 dev/osd0/block) aio_submit retries 5423
2019-01-28 17:17:57.836 7f5d42af2b40 -1 bluestore(dev/osd0) fsck error: #4:238134c4:::tmp_3g:head# error during read: (1073741824) Unknown error 1073741824


Related issues 2 (0 open2 closed)

Copied to bluestore - Backport #38187: mimic: deep fsck fails on inspecting very large onodesResolvedPrashant DActions
Copied to bluestore - Backport #38188: luminous: deep fsck fails on inspecting very large onodesResolvedNathan CutlerActions
Actions #1

Updated by Igor Fedotov about 5 years ago

Looks like aio_queue_t::submit_batch timeouts due to long list of blocks to read. We need to cap this for fsck and, probably, introduce a sort of throttling for regular reads...

Actions #2

Updated by Igor Fedotov about 5 years ago

  • Subject changed from deep fsck fails on inspecting objects >2Gb length to deep fsck fails on inspecting objects very large onodes
Actions #3

Updated by Igor Fedotov about 5 years ago

  • Subject changed from deep fsck fails on inspecting objects very large onodes to deep fsck fails on inspecting very large onodes
Actions #5

Updated by Igor Fedotov about 5 years ago

  • Status changed from New to Fix Under Review
Actions #6

Updated by Sage Weil about 5 years ago

  • Backport set to mimic,luminous
Actions #7

Updated by Yuri Weinstein about 5 years ago

Igor Fedotov wrote:

https://github.com/ceph/ceph/pull/26170

merged

Actions #8

Updated by Neha Ojha about 5 years ago

  • Status changed from Fix Under Review to Pending Backport
Actions #9

Updated by Nathan Cutler about 5 years ago

  • Copied to Backport #38187: mimic: deep fsck fails on inspecting very large onodes added
Actions #10

Updated by Nathan Cutler about 5 years ago

  • Copied to Backport #38188: luminous: deep fsck fails on inspecting very large onodes added
Actions #11

Updated by Igor Fedotov about 5 years ago

  • Status changed from Pending Backport to Resolved
Actions

Also available in: Atom PDF