os/bluestore: cap reads issued during deep fsck

Fixes: https://tracker.ceph.com/issues/38065
Signed-off-by: Igor Fedotov <ifedotov@suse.com>
(cherry picked from commit ced308000aef6050ca1fdbdfe3b4b63a887a1706)

Conflicts:
	src/common/options.cc
- use TYPE_UINT instead of TYPE_SIZE for new bluestore_fsck_read_bytes_cap
  option
- drop .set_flag(Option::FLAG_RUNTIME) because no .set_flag in luminous